Add more canned filed