@@ -1,14 +1,11 @@
 package au.org.aodn.ardcvocabs;
 
-import org.springframework.util.ResourceUtils;
-
-import java.io.File;
+import org.springframework.core.io.ClassPathResource;
 import java.io.IOException;
-import java.nio.file.Files;
 
 public class BaseTestClass {
     public static String readResourceFile(String path) throws IOException {
-        File f = ResourceUtils.getFile(path);
-        return new String(Files.readAllBytes(f.toPath()));
+        ClassPathResource resource = new ClassPathResource(path);
+        return new String(resource.getInputStream().readAllBytes());
     }
 }
